bindings/netstandard/ElectionGuard/ElectionGuard.Encryption/NativeInterface.cs


        #region ContestDescription

        internal static class ContestDescription
        {
            internal struct ContestDescriptionType { };

            internal class ContestDescriptionHandle
                : ElectionGuardSafeHandle<ContestDescriptionType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = ContestDescription.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"ContestDescription Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_contest_description_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string electoralDistrictId,
                ulong sequenceOrder,
                VoteVariationType voteVariation,
                ulong numberElected,
                [MarshalAs(UnmanagedType.LPStr)] string name,
                // TODO: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] selections,
                ulong selectionsSize,
                out ContestDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_new_with_title",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string electoralDistrictId,
                ulong sequenceOrder,
                VoteVariationType voteVariation,
                ulong numberElected,
                ulong votesAllowed,
                [MarshalAs(UnmanagedType.LPStr)] string name,
                InternationalizedText.InternationalizedTextHandle ballotTitle,
                InternationalizedText.InternationalizedTextHandle ballotSubTitle,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] selections,
                ulong selectionsSize,
                out ContestDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_new_with_parties",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string electoralDistrictId,
                ulong sequenceOrder,
                VoteVariationType voteVariation,
                ulong numberElected,
                [MarshalAs(UnmanagedType.LPStr)] string name,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] selections,
                ulong selectionsSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] string[] primaryPartyIds,
                ulong primaryPartyIdsSize,
                out ContestDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_new_with_title_and_parties",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string electoralDistrictId,
                ulong sequenceOrder,
                VoteVariationType voteVariation,
                ulong numberElected,
                ulong votesAllowed,
                [MarshalAs(UnmanagedType.LPStr)] string name,
                InternationalizedText.InternationalizedTextHandle ballotTitle,
                InternationalizedText.InternationalizedTextHandle ballotSubTitle,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] selections,
                ulong selectionsSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] string[] primaryPartyIds,
                ulong primaryPartyIdsSize,
                out ContestDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_free",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status Free(ContestDescriptionType* handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_object_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetObjectId(
                ContestDescriptionHandle handle, out IntPtr objectId);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_electoral_district_id",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetElectoralDistrictId(
                ContestDescriptionHandle handle, out IntPtr electoralDistrictId);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_sequence_order",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetSequenceOrder(
                ContestDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_vote_variation",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern VoteVariationType GetVoteVariationType(
                ContestDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_number_elected",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetNumberElected(
                ContestDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_votes_allowed",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetVotesAllowed(
                ContestDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_name",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetName(
                ContestDescriptionHandle handle, out IntPtr name);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_ballot_title",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetBallotTitle(
                ContestDescriptionHandle handle,
                out InternationalizedText.InternationalizedTextHandle name);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_ballot_subtitle",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetBallotSubTitle(
                ContestDescriptionHandle handle,
                out InternationalizedText.InternationalizedTextHandle name);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_selections_size",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern ulong GetSelectionsSize(
                ContestDescriptionHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_get_selection_at_index",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status GetSelectionAtIndex(
                ContestDescriptionHandle handle,
                ulong index,
                out SelectionDescription.SelectionDescriptionHandle partyId);

            [DllImport(DllName, EntryPoint = "eg_contest_description_crypto_hash",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status CryptoHash(
                ContestDescriptionHandle handle,
                out ElementModQ.ElementModQHandle crypto_hash);
        }

        #endregion

        #region ContestDescriptionWithPlaceholders

        internal static class ContestDescriptionWithPlaceholders
        {
            internal struct ContestDescriptionWithPlaceholdersType { };

            internal class ContestDescriptionWithPlaceholdersHandle
                : ElectionGuardSafeHandle<ContestDescriptionWithPlaceholdersType>
            {
                protected override bool Free()
                {
                    if (IsClosed) return true;

                    var status = ContestDescriptionWithPlaceholders.Free(TypedPtr);
                    if (status != Status.ELECTIONGUARD_STATUS_SUCCESS)
                    {
                        throw new ElectionGuardException($"ContestDescriptionWithPlaceholders Error Free: {status}", status);
                    }
                    return true;
                }
            }

            [DllImport(DllName, EntryPoint = "eg_contest_description_with_placeholders_new",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string electoralDistrictId,
                ulong sequenceOrder,
                VoteVariationType voteVariation,
                ulong numberElected,
                [MarshalAs(UnmanagedType.LPStr)] string name,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] selections,
                ulong selectionsSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] placeholders,
                ulong placeholdersSize,
                out ContestDescriptionWithPlaceholdersHandle handle);

            [DllImport(DllName, EntryPoint = "eg_contest_description_with_placeholders_new_with_title",
                CallingConvention = CallingConvention.Cdecl, SetLastError = true)]
            internal static extern Status New(
                [MarshalAs(UnmanagedType.LPStr)] string objectId,
                [MarshalAs(UnmanagedType.LPStr)] string electoralDistrictId,
                ulong sequenceOrder,
                VoteVariationType voteVariation,
                ulong numberElected,
                ulong votesAllowed,
                [MarshalAs(UnmanagedType.LPStr)] string name,
                InternationalizedText.InternationalizedTextHandle ballotTitle,
                InternationalizedText.InternationalizedTextHandle ballotSubTitle,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] selections,
                ulong selectionsSize,
                // TODO ISSUE #212: type safety
                [MarshalAs(UnmanagedType.LPArray)] IntPtr[] placeholders,
                ulong placeholdersSize,
                out ContestDescriptionWithPlaceholdersHandle handle);
